[Fix #392] Last image of the slideshow wasnt showing up + Fix wrong width for the images

--- a/templates/themes/base/css/splash.css
+++ b/templates/themes/base/css/splash.css
@@ -158,7 +158,7 @@ video#bgvid {
 .img_reel img {
     float: left;
     height: 300px;
-    width: 590px;
+    width: 588px;
 }
 
 /* Make sure Bootstrap "alert" message is always well displayed */
